--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,8 +28,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "app/lib/placeholder-data.js",
-    "scripts/seed.js"
+    "app/lib/*.js",
+    "scripts/*.js"
   ],
   "exclude": ["node_modules"]
 }
