--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "prettier": "prettier --write --ignore-unknown .",
     "prettier:check": "prettier --check --ignore-unknown .",
     "start": "next start",
-    "seed": "node -r dotenv/config ./scripts/seed-docker-pg.js"
+    "seed": "node --require dotenv/config ./scripts/seed-docker-pg.js dotenv_config_path=.env.local"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
