--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -10,3 +10,9 @@ FROM mcr.microsoft.com/devcontainers/javascript-node:1-20-bullseye
 
 # [Optional] Uncomment if you want to install more global node modules
 # RUN su node -c "npm install -g <your-package-list-here>"
+
+WORKDIR /workspaces
+COPY package.json ./
+
+EXPOSE 3000
+CMD npm run dev
