--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -2,16 +2,15 @@ version: '3.8'
 
 services:
   app:
-    # build:
-    #   context: .
-    #   dockerfile: Dockerfile
-    build: .
+    build:
+      context: ..
+      dockerfile: .devcontainer/Dockerfile
 
     volumes:
       - ..:/workspaces
 
     # Overrides default command so things don't shut down after the process ends.
-    command: npm run seed && npm run dev
+    command: npm run dev
 
     # Runs app on the same network as the database container, allows "forwardPorts" in devcontainer.json function.
     # network_mode: service:db
@@ -34,8 +33,6 @@ services:
     # (Adding the "ports" property to this file will not forward from a Codespace.)
     ports:
       - 5432:5432
-    # volumes:
-    #   - postgres-data:/var/lib/postgresql/data
 
   adminer:
     image: adminer:latest
@@ -45,5 +42,3 @@ services:
     depends_on:
       - db
 
-# volumes:
-#   postgres-data:
