--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -9,6 +9,8 @@ services:
     volumes:
       - ..:/workspaces
 
+    env_file: .env
+
     # Overrides default command so things don't shut down after the process ends.
     command: npm run dev
 
